...

    var id: String { rawValue }

    var title: String {
        switch self {
        case .negativeThoughts: "Noticing negative thoughts"
        case .phoneInBed: "Phone in bed"
        case .fallingAsleep: "Getting worried and anxious because you can’t sleep"
        case .wakingAtNight: "Waking up in the middle of the night and staying awake"
        case .inconsistentSchedule: "Inconsistent schedule"
        case .wakingTired: "Waking up tired"
        }
    }
...
